// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSwitcher should toggle off if language is lucene 1`] = `
<EuiPopover
  anchorPosition="downRight"
  button={
    <EuiButtonEmpty
      color="primary"
      iconSide="left"
      onClick={[Function]}
      size="xs"
      type="button"
    >
      <FormattedMessage
        defaultMessage="Options"
        id="common.ui.queryBar.optionsButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  className="eui-displayBlock"
  closePopover={[Function]}
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
>
  <EuiPopoverTitle>
    <FormattedMessage
      defaultMessage="Syntax options"
      id="common.ui.queryBar.syntaxOptionsTitle"
      values={Object {}}
    />
  </EuiPopoverTitle>
  <div
    style={
      Object {
        "width": "350px",
      }
    }
  >
    <EuiText
      grow={true}
      size="m"
    >
      <p>
        <FormattedMessage
          defaultMessage="Our new autocomplete and simple syntax features can help you create your
                queries. Just start typing and you’ll see matches related to your data. See docs {docsLink}."
          id="common.ui.queryBar.syntaxOptionsDescription"
          values={
            Object {
              "docsLink": <EuiLink
                color="primary"
                href="https://www.elastic.co/guide/en/kibana/foo/kuery-query.html"
                target="_blank"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="here"
                  id="common.ui.queryBar.syntaxOptionsDescription.docsLinkText"
                  values={Object {}}
                />
              </EuiLink>,
            }
          }
        />
      </p>
    </EuiText>
    <EuiSpacer
      size="m"
    />
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <EuiSwitch
          checked={false}
          data-test-subj="languageToggle"
          id="queryEnhancementOptIn"
          label={
            <FormattedMessage
              defaultMessage="Turn on query features"
              id="common.ui.queryBar.turnOnQueryFeaturesLabel"
              values={Object {}}
            />
          }
          name="popswitch"
          onChange={[Function]}
        />
      </EuiFormRow>
    </EuiForm>
    <EuiHorizontalRule
      margin="s"
      size="full"
    />
    <EuiText
      grow={true}
      size="xs"
    >
      <p>
        <FormattedMessage
          defaultMessage="Not ready yet? Find our lucene docs {docsLink}."
          id="common.ui.queryBar.luceneDocsDescription"
          values={
            Object {
              "docsLink": <EuiLink
                color="primary"
                href="https://www.elastic.co/guide/en/elasticsearch/reference/foo/query-dsl-query-string-query.html#query-string-syntax"
                target="_blank"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="here"
                  id="common.ui.queryBar.luceneDocsDescription.docsLinkText"
                  values={Object {}}
                />
              </EuiLink>,
            }
          }
        />
      </p>
    </EuiText>
  </div>
</EuiPopover>
`;

exports[`LanguageSwitcher should toggle on if language is kuery 1`] = `
<EuiPopover
  anchorPosition="downRight"
  button={
    <EuiButtonEmpty
      color="primary"
      iconSide="left"
      onClick={[Function]}
      size="xs"
      type="button"
    >
      <FormattedMessage
        defaultMessage="Options"
        id="common.ui.queryBar.optionsButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
  }
  className="eui-displayBlock"
  closePopover={[Function]}
  hasArrow={true}
  id="popover"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="m"
  withTitle={true}
>
  <EuiPopoverTitle>
    <FormattedMessage
      defaultMessage="Syntax options"
      id="common.ui.queryBar.syntaxOptionsTitle"
      values={Object {}}
    />
  </EuiPopoverTitle>
  <div
    style={
      Object {
        "width": "350px",
      }
    }
  >
    <EuiText
      grow={true}
      size="m"
    >
      <p>
        <FormattedMessage
          defaultMessage="Our new autocomplete and simple syntax features can help you create your
                queries. Just start typing and you’ll see matches related to your data. See docs {docsLink}."
          id="common.ui.queryBar.syntaxOptionsDescription"
          values={
            Object {
              "docsLink": <EuiLink
                color="primary"
                href="https://www.elastic.co/guide/en/kibana/foo/kuery-query.html"
                target="_blank"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="here"
                  id="common.ui.queryBar.syntaxOptionsDescription.docsLinkText"
                  values={Object {}}
                />
              </EuiLink>,
            }
          }
        />
      </p>
    </EuiText>
    <EuiSpacer
      size="m"
    />
    <EuiForm>
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <EuiSwitch
          checked={true}
          data-test-subj="languageToggle"
          id="queryEnhancementOptIn"
          label={
            <FormattedMessage
              defaultMessage="Turn on query features"
              id="common.ui.queryBar.turnOnQueryFeaturesLabel"
              values={Object {}}
            />
          }
          name="popswitch"
          onChange={[Function]}
        />
      </EuiFormRow>
    </EuiForm>
    <EuiHorizontalRule
      margin="s"
      size="full"
    />
    <EuiText
      grow={true}
      size="xs"
    >
      <p>
        <FormattedMessage
          defaultMessage="Not ready yet? Find our lucene docs {docsLink}."
          id="common.ui.queryBar.luceneDocsDescription"
          values={
            Object {
              "docsLink": <EuiLink
                color="primary"
                href="https://www.elastic.co/guide/en/elasticsearch/reference/foo/query-dsl-query-string-query.html#query-string-syntax"
                target="_blank"
                type="button"
              >
                <FormattedMessage
                  defaultMessage="here"
                  id="common.ui.queryBar.luceneDocsDescription.docsLinkText"
                  values={Object {}}
                />
              </EuiLink>,
            }
          }
        />
      </p>
    </EuiText>
  </div>
</EuiPopover>
`;
